--- a/dashBoard.html
+++ b/dashBoard.html
@@ -38,8 +38,8 @@
                            <span class="signOut"> 
                                 <span class="login-name"> <h4 class="name">Johny</h4> <span><i class=" login-arrow fa fa-angle-down" aria-hidden="true"></i></span> </span>
                                 <div class="login-signout">
-                                    <div class="login-signin"><i class=" login-arrow fa fa-user-o" aria-hidden="true"></i> <span> <h4 class="name">Johny</h4> </span> </div> 
-                                    <div class="login-signin side-border"><i class="login-arrow fa fa-sign-out" aria-hidden="true"></i> <span> <h4 class="name">Logout</h4></div>
+                                    <div class="login-signin"><i class=" login-arrow fa fa-user-o" aria-hidden="true"></i> <span class="name">Johny </span> </div> 
+                                    <div class="login-signin side-border"><i class="login-arrow fa fa-sign-out" aria-hidden="true"></i> <span class="name">Logout</div>
                                 </div>
                             </span> 
                         </div>
